fix: burger menu overlay/wrap z-index and positioning fixed

--- a/src/components/Burger/style.scss
+++ b/src/components/Burger/style.scss
@@ -1,10 +1,8 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
-    position: fixed;
+    position: relative;
     width: 26px;
     height: 20px;
-    right: 36px;
-    top: 22px;
   }
   
   /* Color/shape of burger icon bars */
@@ -33,7 +31,8 @@
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
   .bm-menu-wrap {
-    position: fixed;
+    position: absolute;
+    top: 0;
     height: 100%;
   }
   
@@ -42,6 +41,7 @@
     background: rgba(0, 0, 0, 0.76);
     padding: 1em;
     font-size: 2em;
+    height: 100%;
   }
   
   /* Morph shape necessary with bubble or elastic */
