--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,13 +1,10 @@
 .footer {
     font-family:Arial, Helvetica, sans-serif;
-    position: fixed;
-    bottom: 0;
-    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    box-shadow: 0px 0px 13px rgb(50, 57, 251);
     width: 100vw;
     height: 10rem;
     background-color: black;
