--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,14 +1,17 @@
 .header {
+    position: fixed;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: 1px solid black;
     width: 100vw;
     height: 63px;
     background-color: rgba(16, 18, 39, 0.37);
+    padding: 0 1.2rem;
 }
 
 .title {
     font-size: 18px;
     color: white;
     margin:auto 0;
-    margin-left: 1rem;
 }
