--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,17 @@
   padding: 0;
 }
 body {
+  height: 100vh;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   margin: 0 auto;
   font-family: "Kode Mono", monospace;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+
+  background-image: url('./assets/img/moon.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
